--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,21 @@
 alabaster==0.7.12
-asn1crypto==0.24.0
 attrs==19.1.0
 Babel==2.7.0
 certifi==2019.6.16
-cffi==1.12.3
 chardet==3.0.4
 colorama==0.4.1
-conda==4.7.11
-conda-package-handling==1.3.11
-cryptography==2.7
 docutils==0.15.2
 idna==2.8
 imagesize==1.1.0
 Jinja2==2.10.1
-libarchive-c==2.8
 MarkupSafe==1.1.1
-menuinst==1.4.16
 numpy==1.17.0
 packaging==19.1
-Pillow==6.1.0
-pycosat==0.6.3
-pycparser==2.19
+pillow==6.1.0
 Pygments==2.4.2
-pyOpenSSL==19.0.0
 pyparsing==2.4.2
-PySocks==1.7.0
 pytz==2019.2
-pywin32==223
 requests==2.22.0
-ruamel-yaml==0.15.46
 scipy==1.3.1
 six==1.12.0
 snowballstemmer==1.9.0
@@ -40,7 +27,6 @@ sphinxcontrib-htmlhelp==1.0.2
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-tqdm==4.32.1
-urllib3==1.24.2
-win-inet-pton==1.1.0
+tetra3==0.1
+urllib3==1.25.3
 wincertstore==0.2
