--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+.npz filter=lfs diff=lfs merge=lfs -text
 *.npz filter=lfs diff=lfs merge=lfs -text
 *.dat filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
